--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.1",
     "framer-motion": "^12.23.24",
     "next": "15.5.6",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
