--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,5 @@ JWT_SECRET=your_jwt_secret_key_here_change_in_production
 JWT_REFRESH_SECRET=your_jwt_refresh_secret_key_here_change_in_production
 NODE_ENV=development
 CORS_ORIGIN=http://localhost:3000
+GUEST_EMAIL=''
+GUEST_PASSWORD=''
